--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
   "authors": [
     {
       "name": "Daniel Lowrey",
-      "email": "rdlowrey@gmail.com",
+      "email": "rdlowrey@php.net",
       "role": "Creator / Lead Developer"
     }
   ],
@@ -15,8 +15,8 @@
     "php": ">=5.4.0"
   },
   "autoload": {
-    "psr-0": {
-      "Alert": "src"
+    "psr-4": {
+      "Alert": "lib"
     }
   },
    "branch-alias": {
