--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,10 @@
             "Amp\\Test\\": "test/"
         }
     },
-    "branch-alias": {
-        "dev-master": "1.0.x-dev"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.x-dev"
+        }
     },
     "repositories": [
         {
