--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,10 @@
             "dev-master": "1.0.x-dev"
         }
     },
+    "suggest": {
+      "php-uv": "Extension for libuv backends (high performance use cases).",
+      "pecl/libevent": "Extension for libevent backends (high performance use cases)."
+    },
     "repositories": [
         {
             "type": "vcs",
