--- a/composer.json
+++ b/composer.json
@@ -39,7 +39,6 @@
         }
     },
     "suggest": {
-      "php-uv": "Extension for libuv backends (high performance use cases).",
-      "pecl/libevent": "Extension for libevent backends (high performance use cases)."
+      "php-uv": "Extension for libuv backends (high performance use cases)."
     }
 }
