F U composer php version requirement

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": ">=7.0.0@dev"
+        "php": ">=7.0.0-dev"
     },
     "autoload": {
         "psr-4": {
