--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,9 @@
     "require": {
         "php": ">=7.0.0-dev"
     },
+    "require-dev": {
+        "phpunit/phpunit": "~4.4.0"
+    },
     "autoload": {
         "psr-4": {
             "Amp\\": "lib/"
