allow php7 in composer.json

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         }
     ],
     "require": {
-        "php": "^5.5"
+        "php": ">=5.5"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.4.0"
