composer.json update

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
         "future",
         "promise",
         "non-blocking",
-        "libevent",
         "libuv"
     ],
     "license": "MIT",
@@ -38,7 +37,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.1.0-dev"
         }
     },
     "suggest": {
