--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "2.0.0-dev"
+            "dev-master": "2.0.0-dev",
             "dev-v1.0.x": "1.0.0-dev"
         }
     }
