--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,9 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.4.0"
+        "phpunit/phpunit": "~4.4.0",
+        "fabpot/php-cs-fixer": "~1.9",
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
