--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.4.0",
         "fabpot/php-cs-fixer": "~1.9",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "0.7.*@dev"
     },
     "autoload": {
         "psr-4": {
