--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,6 @@
     "keywords": [
         "async",
         "concurrency",
-        "future",
         "promise",
         "non-blocking",
         "event"
@@ -24,7 +23,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.4.0",
         "fabpot/php-cs-fixer": "~1.9",
-        "satooshi/php-coveralls": "0.7.*@dev"
+        "satooshi/php-coveralls": "dev-master"
     },
     "autoload": {
         "psr-4": {
@@ -37,9 +36,7 @@
             "Amp\\Test\\": "test/"
         }
     },
-    "extra": {
-        "branch-alias": {
-            "master": "1.0.0-dev"
-        }
+    "support": {
+        "issues": "https://github.com/amphp/amp/issues"
     }
 }
