--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,3 @@
-sudo: false
-
 language: php
 
 php:
@@ -7,13 +5,11 @@ php:
   - 5.6
   - 7
 
-matrix:
-  allow_failures:
-    - php: 7
-
 before_script:
-  - yes "" | pecl install "channel://pecl.php.net/libevent-0.1.0"
-  - yes "" | pecl install ev
+  - php -r 'exit((int) (PHP_MAJOR_VERSION < 7));' || (yes "" | pecl install "channel://pecl.php.net/libevent-0.1.0")
+  - php -r 'exit((int) (PHP_MAJOR_VERSION < 7));' || (yes "" | pecl install ev)
+  - php -r 'exit((int) (PHP_MAJOR_VERSION >= 7));' || ((curl -L https://github.com/joyent/libuv/archive/v1.0.0.tar.gz | tar xzf -) && cd libuv-1.0.0 && ./autogen.sh && ./configure --prefix=/usr && make && sudo make install && cd ..)
+  - php -r 'exit((int) (PHP_MAJOR_VERSION >= 7));' || (git clone https://github.com/bwoebi/php-uv && cd php-uv && phpize && ./configure && make install && (echo "extension = uv.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini) && cd ..)
   - composer self-update
   - composer install
 
