--- a/composer.json
+++ b/composer.json
@@ -20,8 +20,9 @@
     "require": {
         "php": ">=5.5"
     },
+    "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "~4.4.0",
+        "phpunit/phpunit": "4.8.x-dev",
         "fabpot/php-cs-fixer": "~1.9",
         "satooshi/php-coveralls": "dev-master"
     },
