--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,8 @@
     "require": {
         "php": ">=5.5"
     },
-    "minimum-stability": "dev",
     "require-dev": {
-        "phpunit/phpunit": "4.8.x-dev",
+        "phpunit/phpunit": "~4.8",
         "fabpot/php-cs-fixer": "~1.9"
     },
     "autoload": {
