--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         }
     ],
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "react/promise": "^2.4"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.8",
