--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,14 @@
 {
     "name": "async-interop/event-loop",
-    "description": "An event loop interface",
+    "description": "An event loop interface for interoperability.",
     "keywords": ["event", "loop", "async", "interop"],
     "license": "MIT",
     "require": {
-        "php": ">=5.3.0"
+        "php": ">=5.5.0"
     },
     "autoload": {
         "psr-4": {
-            "Interop\\Async\\EventLoop\\": "src/"
+            "Interop\\Async\\": "src"
         }
     }
 }
