--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,9 @@
     "require": {
         "php": ">=5.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^4|^5"
+    },
     "autoload": {
         "psr-4": {
             "Interop\\Async\\": "src"
