Forbid new factories while running, add scope test

--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Interop\\Async\\": "test"
+            "Interop\\Async\\Loop": "test"
         }
     }
 }
