--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
     },
     "require-dev": {
         "amphp/loop": "dev-master",
-        "phpunit/phpunit": "~4.8",
+        "phpunit/phpunit": "^4|^5",
         "fabpot/php-cs-fixer": "~1.9"
     },
     "autoload": {
