--- a/composer.json
+++ b/composer.json
@@ -26,14 +26,14 @@
         }
     ],
     "require": {
-        "php": ">=5.5",
+        "php": ">=7",
         "async-interop/awaitable": "dev-master",
         "async-interop/event-loop": "dev-master",
         "async-interop/event-loop-implementation": "dev-master"
     },
     "require-dev": {
         "amphp/loop": "dev-master",
-        "phpunit/phpunit": "^4|^5",
+        "phpunit/phpunit": "^5",
         "friendsofphp/php-cs-fixer": "~1.9"
     },
     "autoload": {
