--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,14 @@ language: php
 
 php:
   - 7.0
+  - 7.1
   - nightly
+
+matrix:
+  allow_failures:
+    - php: 7.1
+    - php: nightly
+  fast_finish: true
 
 install:
   - composer self-update
