--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     ],
     "require": {
         "php": ">=7",
-        "async-interop/awaitable": "dev-master",
+        "async-interop/promise": "^0.2",
         "async-interop/event-loop": "^0.3",
         "async-interop/event-loop-implementation": "^0.3"
     },
