--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "require": {
     "php": ">=5.5.0",
-    "async-interop/event-loop": "^0.3",
+    "async-interop/event-loop": "^0.4|dev-master",
     "phpunit/phpunit": "^4|^5"
   },
   "autoload": {
