Update to loop standard v0.4

--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
     "homepage": "http://amphp.org",
     "license": "MIT",
     "require": {
-        "async-interop/event-loop": "dev-master"
+        "async-interop/event-loop": "0.4"
     },
     "require-dev": {
         "async-interop/event-loop-test": "dev-master",
         "friendsofphp/php-cs-fixer": "~1.9"
     },
     "provide": {
-        "async-interop/event-loop-implementation": "^0.3"
+        "async-interop/event-loop-implementation": "^0.4"
     },
     "autoload": {
         "psr-4": {
