Add implementation using event extension

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,14 @@ install:
     make install;
     popd;
     echo "extension=ev.so" >> "$(php -r 'echo php_ini_loaded_file();')";
+  - curl -LS https://pecl.php.net/get/event | tar -xz;
+    pushd event-*;
+    phpize;
+    ./configure --with-event-core --with-event-extra --with-event-pthreads;
+    make;
+    make install;
+    popd;
+    echo "extension=event.so" >> "$(php -r 'echo php_ini_loaded_file();')";
   - composer self-update
   - composer install --no-interaction --prefer-source
 
