Require PHPUnit 5 as lowest version

--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,8 @@
         "amphp/loop": "dev-master",
         "async-interop/promise-test": "^0.4.1",
         "friendsofphp/php-cs-fixer": "~1.9",
-        "humbug/humbug": "^1@dev"
+        "humbug/humbug": "^1@dev",
+        "phpunit/phpunit": "^5"
     },
     "autoload": {
         "psr-4": {
