Improve tests and kill some Humbug mutants

--- a/humbug.json.dist
+++ b/humbug.json.dist
@@ -2,6 +2,9 @@
     "source": {
         "directories": [
             "lib"
+        ],
+        "excludes": [
+            "lib/functions.php"
         ]
     },
     "timeout": 10,
