--- a/.travis.yml
+++ b/.travis.yml
@@ -22,6 +22,7 @@ install:
     else
       composer update -n --prefer-source;
     fi;
+  - composer show
 
 script:
   - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
