--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ php:
   - 7.1
   - nightly
 
+matrix:
+  allow_failures:
+    - php: nightly
+  fast_finish: true
+
 install:
   - if [ "$TRAVIS_PHP_VERSION" != "5.5" ] && [ "$TRAVIS_PHP_VERSION" != "5.6" ] ; then
     git clone https://github.com/libuv/libuv;
