Add support for React promises

--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
     },
     "require-dev": {
         "amphp/phpunit-util": "dev-master",
+        "react/promise": "^2",
         "friendsofphp/php-cs-fixer": "~1.9",
         "phpunit/phpunit": "^6"
     },
