Require \micro-optimization

--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,7 @@ install:
 
 script:
   - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml
+  - php vendor/bin/fqn-check lib
   - php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
