--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "async-interop/promise-test": "^0.4.1",
         "friendsofphp/php-cs-fixer": "~1.9",
         "humbug/humbug": "^1@dev",
-        "phpunit/phpunit": "^5.7"
+        "phpunit/phpunit": "^5.7",
+        "kelunik/fqn-check": "^0.1.3"
     },
     "autoload": {
         "psr-4": {
