Fix AsyncInterop → Amp in ErrorHandler

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         }
     ],
     "require": {
-        "php": ">=7",
+        "php": ">=7"
     },
     "require-dev": {
         "friendsofphp/php-cs-fixer": "~1.9",
