--- a/.travis.yml
+++ b/.travis.yml
@@ -12,10 +12,6 @@ matrix:
     - php: nightly
   fast_finish: true
 
-env:
-  - DEPS=lowest
-  - DEPS=highest
-
 install:
   - git clone https://github.com/libuv/libuv;
     pushd libuv;
@@ -42,6 +38,7 @@ install:
     make install;
     popd;
     echo "extension=ev.so" >> "$(php -r 'echo php_ini_loaded_file();')";
+
   - curl -LS https://pecl.php.net/get/event | tar -xz;
     pushd event-*;
     phpize;
@@ -51,11 +48,7 @@ install:
     popd;
     echo "extension=event.so" >> "$(php -r 'echo php_ini_loaded_file();')";
 
-  - if [ "$DEPS" = "lowest" ]; then
-      composer update -n --prefer-source --prefer-lowest;
-    else
-      composer update -n --prefer-source;
-    fi;
+  - composer update -n --prefer-source
   - composer show
 
 script:
