Run memory leak tests separately on Travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,6 +52,8 @@ install:
   - composer show
 
 script:
+    # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
+  - php vendor/bin/phpunit --filter testNoMemoryLeak
   - phpdbg -qrr vendor/bin/phpunit --coverage-text --coverage-clover build/logs/clover.xml --verbose
   - php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
