Allow recording stacktraces to debug double resolution

--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
             "Amp\\": "lib/"
         },
         "files": [
-            "lib/functions.php"
+            "lib/functions.php",
+            "lib/Internal/functions.php"
         ]
     },
     "autoload-dev": {
