Update php-cs-fixer to version 2 and upgrade rules
This also fixes the code style according to the new rules.

--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "require-dev": {
         "amphp/phpunit-util": "dev-master",
         "react/promise": "^2",
-        "friendsofphp/php-cs-fixer": "~1.9",
+        "friendsofphp/php-cs-fixer": "^2.3",
         "phpunit/phpunit": "^6.0.9"
     },
     "autoload": {
