Put memory leak tests into a group to enable skipping
Also fixes the missing directory on Travis.

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,11 +19,12 @@ install:
   # --ignore-platform-reqs, because https://github.com/FriendsOfPHP/PHP-CS-Fixer/pull/2722
   - composer update -n --prefer-dist --ignore-platform-reqs
   - composer show
+  - mkdir -p coverage/cov
 
 script:
   # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
-  - php vendor/bin/phpunit --filter testNoMemoryLeak
-  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group uv --coverage-php coverage/cov/main.cov
+  - php vendor/bin/phpunit --verbose --group memoryleak
+  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --exclude-group uv --coverage-php coverage/cov/main.cov
   - phpdbg -qrr vendor/bin/phpunit --verbose --group uv --coverage-php coverage/cov/uv.cov
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
