Move coverage tool installation to install step to benefit from caching

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,23 +16,26 @@ install:
   - travis/install-uv.sh
   - travis/install-ev.sh
   - travis/install-event.sh
+
   # --ignore-platform-reqs, because https://github.com/FriendsOfPHP/PHP-CS-Fixer/pull/2722
   - composer update -n --prefer-dist --ignore-platform-reqs
+  - composer require satooshi/php-coveralls dev-master
+
+  - mkdir -p coverage/cov coverage/bin
+  - wget -N https://phar.phpunit.de/phpcov.phar -O coverage/bin/phpcov
+  - chmod +x coverage/bin/phpcov
+
   - composer show
-  - mkdir -p coverage/cov
 
 script:
   # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
   - php vendor/bin/phpunit --verbose --group memoryleak
-  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --exclude-group uv --coverage-php coverage/cov/main.cov
+  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak,uv --coverage-php coverage/cov/main.cov
   - phpdbg -qrr vendor/bin/phpunit --verbose --group uv --coverage-php coverage/cov/uv.cov
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
-  - wget https://phar.phpunit.de/phpcov.phar
-  - chmod +x phpcov.phar
   - ./phpcov.phar merge --clover build/logs/clover.xml coverage/cov
-  - composer require satooshi/php-coveralls dev-master
   - php vendor/bin/coveralls -v
 
 cache:
