--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ script:
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
-  - ./phpcov.phar merge --clover build/logs/clover.xml coverage/cov
+  - coverage/bin/phpcov.phar merge --clover build/logs/clover.xml coverage/cov
   - php vendor/bin/coveralls -v
 
 cache:
