--- a/.travis.yml
+++ b/.travis.yml
@@ -30,8 +30,7 @@ install:
 script:
   # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
   - php vendor/bin/phpunit --verbose --group memoryleak
-  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak,uv --coverage-php coverage/cov/main.cov
-  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --group uv --coverage-php coverage/cov/uv.cov
+  - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --coverage-php coverage/cov/main.cov
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
