--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ script:
   # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
   - php vendor/bin/phpunit --verbose --group memoryleak
   - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --coverage-php coverage/cov/main.cov
-  - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
+  - PHP_CS_FIXER_IGNORE_ENV=1 php -n vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
   - coverage/bin/phpcov merge --clover build/logs/clover.xml coverage/cov
