--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,9 @@ matrix:
     - php: nightly
   fast_finish: true
 
+before_install:
+  - phpenv config-rm xdebug.ini
+
 install:
   - travis/install-uv.sh
   - travis/install-ev.sh
@@ -31,7 +34,7 @@ script:
   # Run testNoMemoryLeak separately, as those are skipped with enabled coverage
   - php vendor/bin/phpunit --verbose --group memoryleak
   - phpdbg -qrr vendor/bin/phpunit --verbose --exclude-group memoryleak --coverage-php coverage/cov/main.cov
-  - PHP_CS_FIXER_IGNORE_ENV=1 php -n vendor/bin/php-cs-fixer --diff --dry-run -v fix
+  - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
   - coverage/bin/phpcov merge --clover build/logs/clover.xml coverage/cov
