Order documentation menu

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,3 +11,11 @@ repository: amphp/amp
 gems:
  - "jekyll-github-metadata"
  - "jekyll-relative-links"
+
+navigation:
+ - event-loop
+ - promises
+ - coroutines
+ - iterators
+ - cancellation
+ - utils
