Fix coverage merge script
The coverage merge script needs a coverage driver and as xdebug is now always disabled, we need to run it with phpdbg.

--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ script:
   - PHP_CS_FIXER_IGNORE_ENV=1 php vendor/bin/php-cs-fixer --diff --dry-run -v fix
 
 after_script:
-  - coverage/bin/phpcov merge --clover build/logs/clover.xml coverage/cov
+  - phpdbg -qrr coverage/bin/phpcov merge --clover build/logs/clover.xml coverage/cov
   - php vendor/bin/coveralls -v
 
 cache:
