--- a/.editorconfig
+++ b/.editorconfig
@@ -4,5 +4,5 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
-indent_style = spaces
+indent_style = space
 charset = utf-8
